Adds pictures of AVR Stick PCBs

--- a/README
+++ b/README
@@ -65,6 +65,9 @@ AVR_Stick_Apps
 |                apps stays on active and your boss doesn't see that
 |                you are slacking off at work ;).
 |
+|-images:        Some pictures of the AVR Sticks used for this
+|                project.
+|
 |-misc:            Various files that are not specific to a
 |  |               particular application.
 |  |
